# capss-aggregation

./: .gitignore  CMakeLists.txt  Makefile  README.md
capss/: CMakeLists.txt
capss/executables/: aurora_prove_r1cs_128.cpp  aurora_prove_r1cs_128_zk.cpp  aurora_prove_r1cs_256.cpp  aurora_prove_r1cs_256_zk.cpp  aurora_prove_r1cs_64.cpp  aurora_prove_r1cs_64_zk.cpp
capss/relations/: r1cs_capss.hpp  r1cs_capss.tcc  r1cs_field.cpp  r1cs_field.hpp
capss/snarks/: aurora_prove_r1cs.tcc
cmake/: Findsodium.cmake
patches/: libiop-apple-clang-template-fixes.patch  libiop-no-ate-pairing.patch
scripts/: capss-build-r1cs.py  capss-build-witness.py  capss-sign.py
